--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <section id="section">
         <h1>Jeu Bonneteau</h1>
         <div class="rules">
-            <h2>Règle du jeu</h2>
-            <p>> Cliquer sur une carte.</p>
+            <h2>Règles du jeu</h2>
+            <p>> Cliquez sur une carte.</p>
             <p>> Si la carte est rouge, vous avez gagné</p>
-            <p>> Si la carte est noir, vous avez perdu</p>
+            <p>> Si la carte est noire, vous avez perdu</p>
         </div>
         <div class="container">
             <div class="img-container">
